--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,14 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -59,6 +67,11 @@
           "configurations": {
             "production": {
               "browserTarget": "angular-material-starter:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "angular-material-starter:build:hmr",
+              "hmrWarning": false
             }
           }
         },
