--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets/favicon/favicon.ico",
-              "src/assets"
+              {
+                "glob": "**/!(*.scss)",
+                "input": "./src/assets/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
               "src/styles.scss"
