--- a/package.json
+++ b/package.json
@@ -54,5 +54,19 @@
     "ts-node": "~8.0.1",
     "tslint": "~5.12.1",
     "typescript": "~3.2.4"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "@types/jasmine",
+      "@types/jasminewd2",
+      "@types/node",
+      "jasmine-core",
+      "jasmine-spec-reporter",
+      "karma",
+      "karma-chrome-launcher",
+      "karma-coverage-istanbul-reporter",
+      "karma-jasmine",
+      "karma-jasmine-html-reporter"
+    ]
   }
 }
