Update angular@8.2.14 and @angular/material@8.2.3

--- a/package.json
+++ b/package.json
@@ -7,51 +7,50 @@
     "build": "npm run build:themes && ng build --prod",
     "build:dev": "npm run build:themes && ng build",
     "build:themes": "bash ./tools/build-themes.sh",
-    "build:github": "npm run build:themes && ng build --prod --output-path docs --base-href https://microflash.github.io/angular-material-starter/ && rm src/assets/dark.css src/assets/light.css",
+    "build:github": "npm run build:themes && ng build --prod --output-path docs --base-href https://mflash.dev/angular-material-starter/ && rm src/assets/dark.css src/assets/light.css",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.2",
-    "@angular/cdk": "^8.1.1",
-    "@angular/common": "^8.1.2",
-    "@angular/compiler": "^8.1.2",
-    "@angular/core": "^8.1.2",
-    "@angular/forms": "^8.1.2",
-    "@angular/material": "^8.1.1",
-    "@angular/platform-browser": "^8.1.2",
-    "@angular/platform-browser-dynamic": "^8.1.2",
-    "@angular/router": "^8.1.2",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler-cli": "^8.1.2",
-    "@angular/language-service": "^8.1.2",
-    "@angularclass/hmr": "^2.1.3",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular/cli": "~8.1.3",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "~2.8.16",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~8.9.5",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "~2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.12.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "node-sass": "^4.13.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
   }
